# wiki-ai-translation

./: .env.example  .gitignore  AGENTS.md  CODEX_FEATURE_IMPLEMENTATION_INSTRUCTIONS.md  LICENSE  README.md  constitution.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
docs/: COMMAND_MENU.md  OPERATOR.md  translation-status-system-feature.md
migrations/: 001_init.sql  002_ingest_state.sql  003_translation_runs.sql  004_jobs_dedupe.sql  005_cache_lookup_indexes.sql  006_translation_source_checksum.sql
spec/: translation-bot.spec.md
src/bot/: app.py  backfill_ai_translation_props.py  cache_backfill.py  config.py  db.py  glossary_sync.py  ingest.py  jobs.py  logging.py  mediawiki.py  migrate_translation_status.py  placeholders.py  probe_mediawiki.py  probe_translate_mark.py  probe_translate_page.py  probe_translate_run.py  repair_display_titles.py  run_report.py  runner.py  scheduler.py  segmenter.py  state.py  sync_translation_status.py  tracker.py  translate_page.py  transliteration.py  update_sidebar.py  update_translation_status_ui.py
src/bot/engines/: base.py  google_v3.py
tests/: test_config.py  test_disclaimer.py  test_google_engine.py  test_ingest.py  test_jobs.py  test_mediawiki.py  test_migrate_translation_status.py  test_placeholders.py  test_run_report.py  test_runner_process_queue.py  test_scheduler.py  test_source_lang_usage.py  test_sync_translation_status.py  test_translate_page_utils.py  test_translation_status.py  test_update_sidebar.py
