[project]
name = "wiki-ai-translation"
version = "0.1.0"
description = "DanceResource Wiki Translation Bot"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
  "requests>=2.31.0",
  "psycopg[binary]>=3.1.18",
  "google-cloud-translate>=3.12.0",
  "google-cloud-storage>=2.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
wiki-translate-bot = "bot.app:main"
wiki-translate-runner = "bot.runner:main"
wiki-translate-glossary-sync = "bot.glossary_sync:main"
wiki-translate-cache-backfill = "bot.cache_backfill:main"
wiki-translate-status-migrate = "bot.migrate_translation_status:main"
wiki-translate-status-ui = "bot.update_translation_status_ui:main"
wiki-translate-status-sync-reviewed = "bot.sync_translation_status:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
